hard-gists/7234995/run.log
=== Docker Run Log for 7234995 ===
Started at: Mi 29. Okt 17:02:51 CET 2025

[2025-10-29 17:02:52] START: Running container for 7234995
[2025-10-29 17:02:52] SUCCESS: Container a9336847ffde23ab241902827e257a4c7da6c1f79cc1d6f48f46ae16599ee1a2 started for 7234995
=== Container logs for 7234995 ===
  File "/snippet.py", line 11
    print "Switching to db '%s'" % migration_db
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7234995 ===
[2025-10-29 17:02:54] INFO: Container a9336847ffde23ab241902827e257a4c7da6c1f79cc1d6f48f46ae16599ee1a2 has stopped
